sample/asm/errors/empty_function_body.asm
.function: foo/0
.end

.function: main
    izero 0
    return
.end
